--- a/src/components/ProjectItemGrid/ProjectItemGrid.css
+++ b/src/components/ProjectItemGrid/ProjectItemGrid.css
@@ -15,28 +15,32 @@
 }
 
 .div1 {
-	background-color: pink;
+	background-image: url("../../assets/images/sample1.jpeg");
+	background-size: contain;
 	grid-area: 1 / 1 / 2 / 2;
 }
 .div1:hover {
 	translate: -10px -10px;
 }
 .div2 {
-	background-color: rgb(227, 162, 173);
+	background-size: contain;
+	background-image: url("../../assets/images/sample2.jpeg");
 	grid-area: 1 / 2 / 2 / 3;
 }
 .div2:hover {
 	translate: 10px -10px;
 }
 .div3 {
-	background-color: rgb(243, 139, 156);
+	background-size: contain;
+	background-image: url("../../assets/images/sample3.jpeg");
 	grid-area: 2 / 1 / 3 / 2;
 }
 .div3:hover {
 	translate: -10px 10px;
 }
 .div4 {
-	background-color: rgb(242, 78, 106);
+	background-size: contain;
+	background-image: url("../../assets/images/sample4.jpeg");
 	grid-area: 2 / 2 / 3 / 3;
 }
 .div4:hover {
