--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,6 @@
 	}
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
@@ -40,4 +29,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+}
+.inner-box {
+	box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.3);
 }
