--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,9 +2,23 @@
 	position: absolute;
 	display: flex;
 	flex-direction: column;
-	background-color: pink;
-	max-width: 8rem;
+	background-color: gray;
+	width: 8rem;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+}
+.navigation-container div {
+	display: flex;
+	justify-content: center;
+	font-size: 0.5rem;
+	width: 8rem;
+	margin: 1rem 0;
+	transition: 0.1s ease-out;
+	cursor: pointer;
+}
+
+.navigation-container div:hover {
+	transform: scale(1.1);
+	color: white;
 }
