--- a/src/components/ProjectItemGrid/ProjectItemGrid.css
+++ b/src/components/ProjectItemGrid/ProjectItemGrid.css
@@ -6,27 +6,39 @@
 	grid-row-gap: 0px;
 }
 
-.div1 {
-	grid-area: 1 / 1 / 2 / 2;
+.parent > div {
 	width: 12rem;
 	height: 12rem;
+	cursor: pointer;
+	position: relative;
+	transition: all 0.3s ease;
+}
+
+.div1 {
 	background-color: pink;
+	grid-area: 1 / 1 / 2 / 2;
+}
+.div1:hover {
+	translate: -10px -10px;
 }
 .div2 {
-	grid-area: 1 / 2 / 2 / 3;
-	width: 12rem;
-	height: 12rem;
 	background-color: rgb(227, 162, 173);
+	grid-area: 1 / 2 / 2 / 3;
+}
+.div2:hover {
+	translate: 10px -10px;
 }
 .div3 {
-	grid-area: 2 / 1 / 3 / 2;
-	width: 12rem;
-	height: 12rem;
 	background-color: rgb(243, 139, 156);
+	grid-area: 2 / 1 / 3 / 2;
+}
+.div3:hover {
+	translate: -10px 10px;
 }
 .div4 {
-	grid-area: 2 / 2 / 3 / 3;
-	width: 12rem;
-	height: 12rem;
 	background-color: rgb(242, 78, 106);
+	grid-area: 2 / 2 / 3 / 3;
+}
+.div4:hover {
+	translate: 10px 10px;
 }
