--- a/src/components/SkillCard/SkillCard.css
+++ b/src/components/SkillCard/SkillCard.css
@@ -1,17 +1,21 @@
 .skillcard-container {
 	background-color: lightblue;
 	max-width: 300px;
+	padding: 0.5rem;
 }
 .skillcard-container h2 {
 	text-align: center;
 }
 .skillcard-container ul li {
 	text-align: center;
+	list-style: none;
 }
 .skillcard-description {
 	max-height: 0;
 	overflow: hidden;
-	transition: max-height 0.3s ease-out;
+	transition: max-height 0.7s ease-out;
+
+	margin: 0.5rem;
 }
 
 .skillcard-description.hidden {
