--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,6 @@
 	color: white;
 }
 
-.App-link {
-	color: #61dafb;
-}
-
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
@@ -36,23 +32,12 @@
 		transform: rotate(360deg);
 	}
 }
-.grid-container {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: pink;
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: 1fr;
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-}
 
-.grid-item-1 {
-	grid-area: 1 / 1 / 2 / 2;
-}
-.grid-item-2 {
-	grid-area: 1 / 2 / 2 / 7;
+.page-container {
+	padding: 0 8rem;
+	display: flex;
+
 	justify-content: center;
 	align-items: center;
+	height: 100vh;
 }
