--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,3 +1,7 @@
 .timeline-container {
 	overflow: auto;
+	height: 40rem;
+	width: 80%;
+	border-radius: 10px;
+	box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.3);
 }
