--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -15,11 +15,14 @@
 	font-size: 0.5rem;
 	width: 8rem;
 	margin: 1rem 0;
-	transition: 0.1s ease-out;
+
 	cursor: pointer;
 }
+.navigation-container div a {
+	transition: 0.1s ease-out;
+}
 
-.navigation-container div:hover {
+.navigation-container div a:hover {
 	transform: scale(1.1);
 	color: white;
 }
